--- a/01.md
+++ b/01.md
@@ -7,6 +7,15 @@
   - [ポートフォリオ基本のき](https://cgworld.jp/special/entrylive-online/vol1/channel/104/)
     - [メモ](https://docs.google.com/document/d/10oJlWgdlyhmemeEHsd87exYVEapaZo3ePxTKDKSICBc/edit#heading=h.x99ni9c7aut)
 
+### 得意分野の例
+- ユーザーインターフェース
+- 魔法や爆発、打撃などのエフェクト
+- 動画
+- レイアウト / 色彩デザイン
+- 3Dモデリング / 3Dリギング / 3Dアニメ / 3Dキャラクター / 3Dオブジェクト / 3Dマテリアル
+- 2D手書き / 2D人物 / 2D背景 / 2Dドット
+
+
 ## ゲームプログラマー
 - チーム用のチャンネルを作成してメンバーを登録
 - 以下について話し合って、チーム用のSlackチャンネルに書き込む
@@ -23,3 +32,9 @@
   - クリエイティブコモンズのアセットを置いてあるサイトを探す or ProBuilderで自作する
     - この辺りについて調べたり作業をして、Slackの自分のtimesチャンネルに書き込みましょう
 
+### ジャンル例
+- 2D or 3D
+- ノベル / カード・ボードゲーム / アクション / シューティング / RPG
+- PC / Web / ネットワークPC / スマホ
+
+ガチャ、ログボ、ランキングなどで構わないので、サーバーを利用する機能を検討して欲しい。
