--- a/01.md
+++ b/01.md
@@ -6,6 +6,8 @@
 - ポートフォリオの雛形作成
   - [ポートフォリオ基本のき](https://cgworld.jp/special/entrylive-online/vol1/channel/104/)
     - [メモ](https://docs.google.com/document/d/10oJlWgdlyhmemeEHsd87exYVEapaZo3ePxTKDKSICBc/edit#heading=h.x99ni9c7aut)
+  - [とあるツイート](https://twitter.com/toRisouP/status/1381522737265451009)
+  - [Jini. 子供を地獄かもしれない世界へ誘った理由](https://note.com/j1n1/n/n8ee2242cecc3)
 
 ### 得意分野の例
 - ユーザーインターフェース
