--- a/01.md
+++ b/01.md
@@ -1,4 +1,18 @@
-# 卒業制作1回目
+# 卒業制作1週目
+
+## 2回目：打ち合わせ項目
+以下について考えをまとめて、Slackのグループチャンネルなどに意見や思いついたことを書き込んでいく。
+
+- 決定事項
+  - DATフェスタへの展示は必須
+  - プラットフォームはWindows。画面は1920x1080ピクセル
+- 検討事項
+  - チームメンバーが各自、何ができるか、できそうか
+  - 利用する開発ツール
+  - 画面のラフスケッチ
+  - 世界観が近いと思う参考画像の収集
+
+---
 
 ## ゲームCGキャラクター
 - Googleアカウントの作成・確認
