--- a/03.md
+++ b/03.md
@@ -10,11 +10,16 @@
 - コアステートメント
 - 画面レイアウトのサムネイル(ラフスケッチ)
   - 参考 [Greening](https://docs.google.com/document/d/1ixOE2MyFd6_fndl7IUUph1o7xUZaAiu_Z_prbs5mtv0/)
-- 具体的な操作方法
 - Jesse Schell's ゲームデザインレンズデッキより以下への答えを書き出す
   - [感情](http://deck.artofgamedesign.com/#/menu/1/?lang=jp)
   - [体験の本質](http://deck.artofgamedesign.com/#/menu/2/?lang=jp)
   - [おもしろさ](http://deck.artofgamedesign.com/#/menu/5/?lang=jp)
-- 各自への問い
-  - 自分のやりたいこと、得意なことがこの企画のどこに盛り込めるか、発揮できるか
+- ゲームの世界観
+  - ストーリーや設定があればそれを書く。ハイパーカジュアルや音ゲーなどなら雰囲気の方向性をまとめる
+- 具体的な操作方法
+- ゲームの勝利条件や目的、ゴール
+- ゲームのはじまり
+  - 誰が、どのような状況で、どこからはじまるか
+- どのようなキャラクターが登場するか
+- 自分のやりたいこと、得意なことがこの企画のどこに活かせると考えているか。これは各自でTrelloのinfoリストに別個にカードを作成して記入する
 
