--- a/03.md
+++ b/03.md
@@ -10,7 +10,7 @@
 - コアステートメント
 - 画面レイアウトのサムネイル(ラフスケッチ)
   - 参考 [Greening](https://docs.google.com/document/d/1ixOE2MyFd6_fndl7IUUph1o7xUZaAiu_Z_prbs5mtv0/)
-- Jesse Schell's ゲームデザインレンズデッキより以下への答えを書き出す
+- Jesse Schell's ゲームデザインレンズデッキより以下への答えを書き出す(参考になりそうな項目だけで良い)
   - [感情](http://deck.artofgamedesign.com/#/menu/1/?lang=jp)
   - [体験の本質](http://deck.artofgamedesign.com/#/menu/2/?lang=jp)
   - [おもしろさ](http://deck.artofgamedesign.com/#/menu/5/?lang=jp)
@@ -21,5 +21,8 @@
 - ゲームのはじまり
   - 誰が、どのような状況で、どこからはじまるか
 - どのようなキャラクターが登場するか
-- 自分のやりたいこと、得意なことがこの企画のどこに活かせると考えているか。これは各自でTrelloのinfoリストに別個にカードを作成して記入する
+
+上記と別に、TrelloのInfoリストに各自でカードを作成して、以下について書いておく。
+
+- 自分のやりたいこと、得意なことがこの企画のどこに活かせると考えているか
 
